--- a/ContSealApp.csproj
+++ b/ContSealApp.csproj
@@ -30,7 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="4.1.0" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.3.0" />
   </ItemGroup>
 
 </Project>
